Config file + loading config works. [+] Some fixes in Scroll