@@ -5,15 +5,22 @@ import enums.TrialEvent;
 import enums.TrialStatus;
 import model.Block;
 import model.Trial;
+import org.apache.commons.configuration2.PropertiesConfiguration;
+import org.apache.commons.configuration2.builder.FileBasedConfigurationBuilder;
+import org.apache.commons.configuration2.builder.fluent.Configurations;
+import org.apache.commons.configuration2.builder.fluent.Parameters;
+import org.apache.commons.configuration2.convert.DefaultListDelimiterHandler;
+import org.apache.commons.configuration2.ex.ConfigurationException;
 import org.tinylog.Logger;
 import org.tinylog.TaggedLogger;
+import tool.MoDimension;
 
 import javax.swing.*;
 import java.awt.*;
 import java.awt.event.ActionEvent;
 import java.util.ArrayList;
 
-import static tool.Constants.COLORS;
+import static tool.Constants.*;
 
 /***
  * JlayeredPane to use indexes for objects
@@ -26,17 +33,73 @@ public class TaskPanel extends JLayeredPane {
     protected Block activeBlock;
     protected Trial activeTrial;
 
+    // Config
+    private final String CONFIG_FILE_NAME = "config.properties";
+    public PropertiesConfiguration config;
+
     // UI
     JLabel progressLabel = new JLabel();
     JLabel endTaskLabel = new JLabel();
+    JButton configButton = new JButton();
+    JLabel configLabel = new JLabel();
+
+    // Consts
+    final Dimension PRG_LBL_DIM = new MoDimension(200, 30);
+    final int PRG_LBL_RIGHT = 10; // Progress label from the right side
+    final int PRG_LBL_TOP = 15;
+    final int PRG_LBL_FONT_SIZE = 20;
 
     public TaskPanel(Dimension dim) {
-        conLog.trace("Width: {}", getWidth());
-        progressLabel.setBounds(dim.width - 300, dim.height - 50, 300, 30);
-        progressLabel.setFont(new Font(progressLabel.getFont().getFontName(), Font.PLAIN, 20));
+        conLog.info("Width: {}", DISP.mmToPxH(10));
+
+        // Set up progress label
+        progressLabel.setBounds(
+                dim.width - DISP.mmToPxW(PRG_LBL_RIGHT) - PRG_LBL_DIM.width,
+                DISP.mmToPxH(PRG_LBL_TOP),
+                PRG_LBL_DIM.width, PRG_LBL_DIM.height);
+        progressLabel.setFont(new Font(progressLabel.getFont().getFontName(), Font.PLAIN, PRG_LBL_FONT_SIZE));
         progressLabel.setVerticalAlignment(JLabel.CENTER);
         progressLabel.setHorizontalAlignment(JLabel.CENTER);
 //        progressLabel.setVisible(true);
+
+
+        // Set up the config button
+        configButton.setText("Load Config");
+        configButton.setBounds(
+                DISP.mmToPxW(20),
+                dim.height - DISP.mmToPxH(20) - 50,
+                200, 50);
+
+        // Set up the config label
+        configLabel.setText("Press the button to load config");
+        configLabel.setBounds(
+                configButton.getX(),
+                configButton.getY() + 50,
+                2000, 50);
+
+        // Load config at the beginning
+//        try {
+//            loadConfig();
+//        } catch (ConfigurationException e) {
+//            configLabel.setText("Problem in loading config");
+//            throw new RuntimeException(e);
+//        }
+
+    }
+
+    protected void loadConfig() throws ConfigurationException {
+        config = new FileBasedConfigurationBuilder<>(PropertiesConfiguration.class)
+                .configure(new Parameters()
+                        .properties()
+                        .setFileName(CONFIG_FILE_NAME)
+                        .setListDelimiterHandler(new DefaultListDelimiterHandler(',')))
+                .getConfiguration();
+
+//        try {
+//
+//        } catch (ConfigurationException ex) {
+//            throw new RuntimeException(ex);
+//        }
     }
 
     protected void createBlocks() {
@@ -47,7 +110,7 @@ public class TaskPanel extends JLayeredPane {
      * Start the current block
      */
     protected void starTask() {
-        activeBlock = blocks.get(0);
+        activeBlock = blocks.getFirst();
         startBlock();
     }
 
@@ -55,14 +118,18 @@ public class TaskPanel extends JLayeredPane {
      * Show a trial
      */
     protected void startBlock() {
+        activeTrial = activeBlock.getTrial(1);
+
         for (Component c : getComponentsInLayer(JLayeredPane.DEFAULT_LAYER)) {
             remove(c);
             repaint();
         }
 
-        add(progressLabel, DEFAULT_LAYER);
+        add(progressLabel, JLayeredPane.DEFAULT_LAYER);
+        add(configButton, JLayeredPane.DEFAULT_LAYER);
+        add(configLabel, JLayeredPane.DEFAULT_LAYER);
 
-        // Implemented by the subclasses
+        // Implemented by the subclasses...
     }
 
     protected boolean wasTrialSeccess() {
